# OpenDeck

./: package.json
src-cli/: Cargo.toml  rustfmt.toml
src-cli/src/: handlers.rs  main.rs  router.rs  sse.rs
src/components/: ActionList.svelte  DeviceSelector.svelte  DeviceView.svelte  InstanceEditor.svelte  Key.svelte  NoDevicesDetected.svelte  ParentActionView.svelte  PluginDetails.svelte  PluginManager.svelte  ProfileManager.svelte  PropertyInspectorView.svelte  SettingsView.svelte
src/lib/: dialogActions.ts  invokeServerAction.ts  listenServerSentEvents.ts  ports.ts  propertyInspector.ts  rendererHelper.ts  settings.ts  shims.ts  validators.ts
