[package]
name = "opendeck-cli"
version = "0.0.1"
description = "Use stream controllers"
authors = ["Przemysław Maliński (p-malinski)", "Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
repository = "https://github.com/p-malinski/OpenDeckCLI"
edition = "2024"

[build-dependencies]
built = { version = "0.8", features = ["dependency-tree", "git2"] }

[dependencies]
# Large, fundamental libraries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.28"
tiny_http = "0.12"
elgato-streamdeck = { version = "0.12", default-features = false, features = ["async"] }
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
# Smaller utility libraries
once_cell = "1.21"
dashmap = { version = "6.1", features = ["serde"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
log-panics = "2.1"
fs2 = "0.4"
open = "5.3"
serde-inline-default = "1.0"
serde_with = "3.16"
json-patch = "4.1"
os_info = "3.13"
urlencoding = "2.1"
base64 = "0.22"
reqwest = "0.12"
zip = { version = "6.0", default-features = false, features = ["deflate", "zstd"] }
active-win-pos-rs = "0.9"
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
semver = "1.0"
path-slash = "0.2"
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61"
